tests/lean/replaceLocalDeclInstantiateMVars.lean.expected.out
replaceLocalDeclInstantiateMVars.lean:54:18-57:44: error: unsolved goals
h₂ : Nat
h₁ : h₂ = h₂
⊢ True
